--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<h2>Ficou alguma dúvida?</h2>
 				<div class="duvida">
 					<h3>Quais serviços são oferecidos pela clínica veterinária da PetLife?</h3>
-          <img src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
+          <img class="setaBaixo" src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
 					<p class="paragrafo">
 						A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, 
 						tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, 
@@ -83,7 +83,7 @@
 				</div>
 				<div class="duvida">
 					<h3>Quais espécies de animais a clínica veterinária atende?</h3>
-          <img src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
+          <img class="setaBaixo" src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
           <p class="paragrafo">
             A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. 
             Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendo um atendimento 
@@ -92,7 +92,7 @@
 				</div>
 				<div class="duvida">
 					<h3>A clínica veterinária da PetLife possui serviços de emergência?</h3>
-          <img src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
+          <img class="setaBaixo" src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
           <p class="paragrafo">
             Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento 
             veterinário imediato fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento 
@@ -101,7 +101,7 @@
 				</div>
 				<div class="duvida">
 					<h3>A clínica oferece serviços de banho e tosa?</h3>
-          <img src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
+          <img class="setaBaixo" src="/assets/images/arrow-down.svg" alt="Imagem: Seta para baixo" loading="lazy">
           <p class="paragrafo">
             Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes 
             garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter 
@@ -140,5 +140,6 @@
     Desenvolvido por <a href="https://github.com/Fabio-SS" target="_blank">@fsdssouza</a>
     na trilha Start na Programação da  🤘OneBitCode
   </div>
+	<script src="/assets/javascript/index.js"></script>
 </body>
 </html>
